--- a/logdbcoreapi/appsettings.json
+++ b/logdbcoreapi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;user id=root;pwd=;database=longdbcode;"
+  }
 }
